--- a/app/src/main/res/layout/list_new_dialog.xml
+++ b/app/src/main/res/layout/list_new_dialog.xml
@@ -15,11 +15,23 @@
         android:layout_alignParentStart="true" />
 
     <Button
+        android:text="Delete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/list_del_btn"
+        android:layout_below="@+id/list_name_et"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <Button
         android:text="Save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/list_btn"
+        android:layout_marginRight="89dp"
+        android:layout_marginEnd="89dp"
         android:layout_below="@+id/list_name_et"
-        android:layout_centerHorizontal="true" />
+        android:layout_toLeftOf="@+id/list_del_btn"
+        android:layout_toStartOf="@+id/list_del_btn" />
 
 </RelativeLayout>
