--- a/app/src/main/res/layout/lists_adpr_view.xml
+++ b/app/src/main/res/layout/lists_adpr_view.xml
@@ -24,5 +24,19 @@
         android:id="@+id/imageView2"
         android:layout_alignBottom="@+id/lists_tv"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="15dp" />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/hori_dots"
+        android:id="@+id/list_optn_btn"
+        android:layout_marginRight="22dp"
+        android:layout_marginEnd="22dp"
+        android:layout_alignTop="@+id/imageView2"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="15dp" />
+
 </RelativeLayout>
