--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -16,6 +16,13 @@
 
 
     <item
+        android:id="@+id/action_edit_cat"
+        android:orderInCategory="100"
+        android:title="@string/action_edit_cat"
+        app:showAsAction="never" />
+
+
+    <item
         android:id="@+id/spinner"
         android:title="ActionBar Spinner"
         app:actionViewClass="android.widget.Spinner"
