--- a/app/src/main/res/layout/store_new_dialog.xml
+++ b/app/src/main/res/layout/store_new_dialog.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -7,21 +8,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
-        <AutoCompleteTextView
-            android:id="@+id/store_et"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="Store Name..."
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginLeft="11dp"
-            android:layout_marginStart="11dp"
-            android:layout_marginTop="25dp">
-            <requestFocus />
-        </AutoCompleteTextView>
 
         <EditText
             android:layout_width="match_parent"
@@ -42,9 +28,32 @@
             android:id="@+id/store_btn"
             android:layout_marginLeft="113dp"
             android:layout_marginStart="113dp"
+            style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_below="@+id/store_lcn_et"
             android:layout_alignLeft="@+id/store_lcn_et"
             android:layout_alignStart="@+id/store_lcn_et" />
+
+        <AutoCompleteTextView
+            android:id="@+id/store_et"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Store Name..."
+            android:layout_below="@+id/imageView4"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true">
+            <requestFocus />
+        </AutoCompleteTextView>
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/grocerybag"
+            android:id="@+id/imageView4"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:background="@color/dialogColors" />
 
     </RelativeLayout>
 </LinearLayout>
