--- a/app/src/main/res/layout/cat_adpr_view.xml
+++ b/app/src/main/res/layout/cat_adpr_view.xml
@@ -13,7 +13,9 @@
         android:id="@+id/cat_tv"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:padding="10dp"
+        android:textStyle="normal|bold" />
 
     <ImageButton
         android:layout_width="wrap_content"
@@ -25,4 +27,14 @@
         android:layout_alignBottom="@+id/cat_tv"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@android:drawable/ic_input_get"
+        android:layout_alignTop="@+id/cat_del_btn"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/imageView7"
+        android:layout_marginLeft="5dp" />
 </RelativeLayout>
