--- a/app/src/main/res/layout/cat_new_dialog.xml
+++ b/app/src/main/res/layout/cat_new_dialog.xml
@@ -1,18 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent" android:layout_height="match_parent">
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:ems="10"
-        android:hint="Shopping category name"
-        android:layout_marginTop="35dp"
-        android:id="@+id/cat_name_et"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
 
     <Button
         android:text="Save"
@@ -22,7 +11,29 @@
         android:layout_marginStart="138dp"
         android:layout_marginTop="12dp"
         android:id="@+id/cat_btn"
+        style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_below="@+id/cat_name_et"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/grocerybag"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/imageView6"
+        android:background="@color/dialogColors" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:ems="10"
+        android:hint="Shopping category name"
+        android:layout_marginTop="12dp"
+        android:id="@+id/cat_name_et"
+        android:layout_below="@+id/imageView6"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 </RelativeLayout>
