--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -7,6 +7,17 @@
     tools:context="com.andre3.smartshopperslist.MainActivity">
 
 
+    <TextView
+        android:text="My Lists:"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView2"
+        android:textSize="16sp"
+        android:textColor="@color/colorAccent"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="5dp"
+        android:textStyle="normal|bold" />
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
@@ -15,9 +26,11 @@
         android:layout_margin="@dimen/fab_margin"
         app:srcCompat="@android:drawable/ic_menu_add" />
 
+
     <ListView
         android:layout_width="match_parent"
         android:layout_height="486dp"
-        android:id="@+id/list_name_lv" />
+        android:id="@+id/list_name_lv"
+        android:layout_marginTop="35dp" />
 
 </android.support.design.widget.CoordinatorLayout>
