--- a/app/src/main/res/layout/list_group.xml
+++ b/app/src/main/res/layout/list_group.xml
@@ -24,7 +24,7 @@
             android:id="@+id/lblListHeader"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
+            android:paddingLeft="25dp"
             android:textSize="17dp"
             android:textColor="#7e7e7e"
             android:layout_alignParentTop="true"
