--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,16 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="55dip"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/lblListItem"
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="17dip"
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
-        android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft" />
+        android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"
+        android:text="item name..."
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:textStyle="normal|bold" />
 
-</LinearLayout>
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/shopping_cart2"
+        android:id="@+id/item_del_btn"
+        android:layout_alignTop="@+id/item_price"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@android:drawable/ic_input_add"
+        android:id="@+id/item_qty_btn"
+        android:layout_below="@+id/lblListItem"
+        android:layout_alignLeft="@+id/item_price"
+        android:layout_alignStart="@+id/item_price"
+        android:layout_marginTop="3dp" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="15dp"
+        android:background="#e1e1e1"
+        android:layout_below="@+id/item_qty_btn"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+    </View>
+
+    <TextView
+        android:text="isle:"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/item_isle"
+        android:layout_marginLeft="44dp"
+        android:layout_marginStart="44dp"
+        android:paddingBottom="10dp"
+        android:layout_alignBaseline="@+id/item_qty"
+        android:layout_alignBottom="@+id/item_qty"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:text="0.00"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="40dp"
+        android:layout_marginEnd="40dp"
+        android:id="@+id/item_price"
+        android:textColor="@android:color/holo_green_dark"
+        android:layout_alignBaseline="@+id/lblListItem"
+        android:layout_alignBottom="@+id/lblListItem"
+        android:layout_toLeftOf="@+id/item_del_btn"
+        android:layout_toStartOf="@+id/item_del_btn" />
+
+    <TextView
+        android:text="Qty:"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/item_qty"
+        android:layout_below="@+id/item_del_btn"
+        android:layout_toRightOf="@+id/item_isle"
+        android:layout_toEndOf="@+id/item_isle"
+        android:layout_marginLeft="52dp"
+        android:layout_marginStart="52dp" />
+
+</RelativeLayout>
