--- a/app/src/main/res/layout/list_new_dialog.xml
+++ b/app/src/main/res/layout/list_new_dialog.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent" android:layout_height="match_parent">
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/grocerybag"
+        android:id="@+id/imageView5"
+        android:background="@color/dialogColors" />
 
     <EditText
         android:layout_width="match_parent"
@@ -8,9 +16,9 @@
         android:inputType="textPersonName"
         android:hint="Shopping list name..."
         android:ems="10"
-        android:layout_marginTop="11dp"
         android:id="@+id/list_name_et"
-        android:layout_alignParentTop="true"
+        android:layout_marginTop="16dp"
+        android:layout_below="@+id/imageView5"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -20,18 +28,22 @@
         android:layout_height="wrap_content"
         android:id="@+id/list_del_btn"
         android:layout_below="@+id/list_name_et"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_toRightOf="@+id/list_btn"
+        android:layout_toEndOf="@+id/list_btn"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_marginLeft="39dp"
+        android:layout_marginStart="39dp" />
 
     <Button
         android:text="Save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/list_btn"
-        android:layout_marginRight="89dp"
-        android:layout_marginEnd="89dp"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_marginLeft="68dp"
+        android:layout_marginStart="68dp"
         android:layout_below="@+id/list_name_et"
-        android:layout_toLeftOf="@+id/list_del_btn"
-        android:layout_toStartOf="@+id/list_del_btn" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
