--- a/app/src/main/res/layout/lists_adpr_view.xml
+++ b/app/src/main/res/layout/lists_adpr_view.xml
@@ -3,40 +3,55 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
-    <TextView
-        android:text="loading...."
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="26dp"
-        android:id="@+id/lists_tv"
-        android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/imageView2"
-        android:layout_toEndOf="@+id/imageView2"
-        android:layout_marginLeft="18dp"
-        android:layout_marginStart="18dp" />
-
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@android:drawable/ic_menu_sort_by_size"
+        app:srcCompat="@drawable/lists_icon"
         android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
         android:id="@+id/imageView2"
         android:layout_alignBottom="@+id/lists_tv"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="15dp" />
+        android:paddingTop="20dp"
+        android:paddingBottom="20dp" />
 
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/hori_dots"
         android:id="@+id/list_optn_btn"
-        android:layout_marginRight="22dp"
-        android:layout_marginEnd="22dp"
-        android:layout_alignTop="@+id/imageView2"
+        android:layout_marginRight="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="11dp"
+        android:layout_alignTop="@+id/lists_tv"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="15dp" />
+        android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:text="loading...."
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/lists_tv"
+        android:paddingBottom="20dp"
+        android:textSize="16sp"
+        android:paddingTop="20dp"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/imageView2"
+        android:layout_toEndOf="@+id/imageView2"
+        android:layout_marginLeft="13dp"
+        android:layout_marginStart="13dp" />
+
+    <TextView
+        android:text="0"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="30dp"
+        android:layout_marginEnd="30dp"
+        android:id="@+id/list_itm_count"
+        android:layout_alignBaseline="@+id/lists_tv"
+        android:layout_alignBottom="@+id/lists_tv"
+        android:layout_toLeftOf="@+id/list_optn_btn"
+        android:layout_toStartOf="@+id/list_optn_btn" />
 
 </RelativeLayout>
