--- a/app/src/main/res/layout/store_edit_frg.xml
+++ b/app/src/main/res/layout/store_edit_frg.xml
@@ -17,7 +17,22 @@
             android:id="@+id/store_edit_lv"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="40dp" />
+
+        <TextView
+            android:text="Manage Stores:"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView3"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="5dp"
+            android:textSize="16sp"
+            android:textStyle="normal|bold"
+            android:textColor="@color/colorPrimary" />
     </RelativeLayout>
 
 
