--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#de7e55</color>
     <color name="textColors">#ffffff</color>
+    <color name="dialogColors">#ef9f7d</color>
 </resources>
