--- a/app/src/main/res/layout/list_new_dialog.xml
+++ b/app/src/main/res/layout/list_new_dialog.xml
@@ -23,16 +23,25 @@
         android:layout_alignParentStart="true" />
 
     <Button
+        android:text="Set a reminder"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/list_rem_btn"
+        android:layout_below="@+id/list_name_et"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="13dp" />
+
+    <Button
         android:text="Delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/list_del_btn"
-        android:layout_below="@+id/list_name_et"
-        android:layout_toRightOf="@+id/list_btn"
-        android:layout_toEndOf="@+id/list_btn"
         style="@style/Widget.AppCompat.Button.Borderless"
-        android:layout_marginLeft="39dp"
-        android:layout_marginStart="39dp" />
+        android:layout_marginTop="40dp"
+        android:layout_below="@+id/list_rem_btn"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <Button
         android:text="Save"
@@ -40,10 +49,22 @@
         android:layout_height="wrap_content"
         android:id="@+id/list_btn"
         style="@style/Widget.AppCompat.Button.Borderless"
-        android:layout_marginLeft="68dp"
-        android:layout_marginStart="68dp"
-        android:layout_below="@+id/list_name_et"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_marginRight="71dp"
+        android:layout_marginEnd="71dp"
+        android:layout_marginTop="35dp"
+        android:layout_below="@+id/list_rem_btn"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:text="None"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/list_rem_tv"
+        android:layout_alignBaseline="@+id/list_rem_btn"
+        android:layout_alignBottom="@+id/list_rem_btn"
+        android:layout_alignLeft="@+id/list_btn"
+        android:layout_alignStart="@+id/list_btn"
+        android:layout_marginLeft="20dp" />
 
 </RelativeLayout>
