--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -15,6 +15,12 @@
         app:showAsAction="never" />
 
     <item
+        android:id="@+id/action_options"
+        android:orderInCategory="100"
+        android:title="@string/action_edit_options"
+        app:showAsAction="never" />
+
+    <item
         android:id="@+id/spinner"
         android:title="ActionBar Spinner"
         app:actionViewClass="android.widget.Spinner"
