--- a/app/src/main/res/anim/slide_right.xml
+++ b/app/src/main/res/anim/slide_right.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <translate xmlns:android="http://schemas.android.com/apk/res/android"
-    android:fromXDelta="0%" android:toXDelta="100%"
-    android:fromYDelta="0%" android:toYDelta="0%"
-    android:duration="600"/>
+    android:fromXDelta="-100%"
+    android:toXDelta="0"
+    android:interpolator="@android:anim/accelerate_interpolator"
+    android:duration="@android:integer/config_mediumAnimTime"/>
